test/constrained-generics/basic/error-cg-arg.good
error-cg-arg.chpl:15: In function 'cgFun':
error-cg-arg.chpl:17: error: unresolved call 'reqFun(5, int(64))'
error-cg-arg.chpl:9: note: this candidate did not match: reqFun(cgFormal: Q, formal2: int(64))
error-cg-arg.chpl:17: note: because actual argument #1 with type 'int(64)'
error-cg-arg.chpl:9: note: is passed to formal 'cgFormal: Q'
